@@ -128,6 +128,8 @@ UI
 
 * Fix page banner in menu editor.
 
+* Tidied up some code in customer_mailing.html
+
 Standard demo
 -------------
 
